# It-Praktik

./: .gitignore  Makefile  README.md  module.yaml  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
docs/: API.md  CONFORMANCE.md  USAGE.md
scripts/: attach.sh  bump_version.py  conformance.sh  detach.sh  validate_module.py
src/it_praktik/: __init__.py  app.py  cli.py  diff_api.py  events.py  grep_api.py  grep_dsl.py  indexer.py  logs_api.py  logs_core.py  logs_jsonl.py  logs_junit.py  logs_parser.py  logs_rules.py  metrics.py  metrics_api.py  obs.py  rag_api.py  rag_bm25.py  rag_index_api.py  rag_vector.py  rbac.py  tests_api.py  tests_scaffold.py  web_api.py  web_fetch.py
src/it_praktik/cli/: main.py
tests/: conftest.py  test_health.py
