[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "it-praktik"
version = "0.1.0"
description = "IT Praktik core service (FastAPI + CLI)."
authors = [{name = "Andrey"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.6",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "loguru>=0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "coverage>=7",
  "mypy>=1.11",
  "ruff>=0.6",
  "black>=24.8"
]

[project.scripts]
itp = "it_praktik.cli:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "N"]
ignore = []

[tool.black]
line-length = 100

[tool.mypy]
python_version = 3.11
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = false
# наоборот, не душим на старт
disable_error_code = ["attr-defined", "call-arg"]
